--- a/6_practical_applications.ipynb
+++ b/6_practical_applications.ipynb
@@ -293,6 +293,7 @@
     "Solving a system of equations like this extends to many problems like linear programming and many areas of scientific research.\n",
     "\n",
     "Here is a visualization of this system of equations being solved. Notice how the yellow vector $ B $ shifts after the basis vectors reflecting matrix $ A $ are moved to their identity positions. This results in vector $ B $ becoming vector $ X $, effectively solving for the variables. \n",
+    "<br><br>\n",
     "\n",
     "<video src=\"https://github.com/thomasnield/anaconda_linear_algebra/raw/main/media/01_SystemOfEquationsScene.mp4\" controls=\"controls\" style=\"max-width: 730px;\">\n",
     "</video>\n"
@@ -552,7 +553,7 @@
     "Then we can use this formula to calculate the coefficients in vector $ b $. \n",
     "\n",
     "$\n",
-    "b = R^{-1} \\cdot Q^T \\cdot y \n",
+    "\\Large b = R^{-1} \\cdot Q^T \\cdot y \n",
     "$"
    ]
   },
@@ -672,7 +673,7 @@
     "<video src=\"https://github.com/thomasnield/anaconda_linear_algebra/raw/main/media/02_NeuralNetworkScene.mp4\" controls=\"controls\" style=\"max-width: 730px;\">\n",
     "</video>\n",
     "\n",
-    "Above, we represent the `RED`, `GREEN`, and `BLUE` inputs as $x_1$, $x_2$, and $x_3$. This would represent one row of matrix $ X $. We have three nodes in the *hidden layer* and associate weights $w_1$ through $w_9$ (each between -1 and 1) for each pair of input node to hidden node. We also add a bias value to each node. The resulting value is passed to a nonlinear function called ReLU which simply turns negative values to 0. We repeat this process again between the hidden nodes and the output node, which involves another three weights $w_{10}$ through $w_{12}$ and another bias value $ b_4$. That is passed through a sigmoid function. If that output value is less than $0.5$, we categorize it as `LIGHT`. Otherwise, we categorize it as `DARK`. \n",
+    "Above, we represent the `RED`, `GREEN`, and `BLUE` inputs as $x_1$, $x_2$, and $x_3$. This would represent one row of matrix $ X $. We have three nodes in the *hidden layer* and associate weights $w_1$ through $w_9$ for each pair of input node to hidden node. We also add a bias value to each node. The resulting value is passed to a nonlinear function called ReLU which simply turns negative values to 0. We repeat this process again between the hidden nodes and the output node, which involves another three weights $w_{10}$ through $w_{12}$ and another bias value $ b_4$. That is passed through a sigmoid function. If that output value is less than $0.5$, we categorize it as `LIGHT`. Otherwise, we categorize it as `DARK`. \n",
     "\n",
     "Note how each layer of nodes can be represented purely by matrices of the weights and biases. Let's capture them below. \n",
     "\n",
